--- a/app/pages/host-account/host-account-managers-inactive.pug
+++ b/app/pages/host-account/host-account-managers-inactive.pug
@@ -5,6 +5,7 @@ block head
 
 block bodyClasses
   - var bodyCls = ' is-sm-noheader';
+  - var isNoFooter = true
 
 block header
   - var headerClass = ' is-login'
