fix for finances statements

--- a/app/blocks/table/nd-table.scss
+++ b/app/blocks/table/nd-table.scss
@@ -795,7 +795,7 @@
       }
     }
 
-    &_mobile {
+    &-mobile {
       width: 100%;
 
       @include screen('sm', max, 2) {
@@ -807,6 +807,10 @@
         @include screen('sm', max, 2) {
           display: none;
         }
+
+        tr {
+          border-width: 0;
+        }
       }
 
       tbody {
@@ -817,6 +821,8 @@
       }
 
       tr {
+        border-color: $nd-color-table-border;
+
         @include screen('sm', max, 2) {
           @include display-grid;
           @include grid-template-columns(1fr auto);
@@ -842,8 +848,34 @@
         }
       }
 
+      td {
+        @include rule(line-height, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+
+        b {
+          font-weight: 700;
+
+          @include screen('sm', max, 2) {
+            font-weight: inherit;
+          }
+        }
+      }
+
       td, th {
+        padding: 11px 12px 11px 0;
+        text-align: left;
         box-sizing: border-box;
+
+        @include screen('xlg', max, 2) {
+          padding: pxtovw(11, 1660) pxtovw(12, 1660) pxtovw(11, 1660) 0;
+        }
+
+        @include screen('lg', max, 2) {
+          padding: pxtovw(12, 1366) pxtovw(12, 1366) pxtovw(11, 1366) 0;
+        }
+
+        @include screen('md', max, 2) {
+          padding: pxtovw(12, 960) pxtovw(12, 960) pxtovw(11, 960) 0;
+        }
 
         @include screen('sm', max, 2) {
           display: inline-block;
@@ -851,10 +883,8 @@
           font-size: pxtovw(16, 375);
         }
 
-        b {
-          @include screen('sm', max, 2) {
-            font-weight: inherit;
-          }
+        &:nth-last-child(1), &:nth-last-child(2) {
+          text-align: right;
         }
 
         &:first-child {
@@ -926,6 +956,19 @@
               width: 100%;
             }
           }
+        }
+      }
+
+      th {
+        line-height: 1;
+        color: $nd-color-gray-text;
+        font-weight: 400;
+
+        @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+        @include rule(padding-bottom, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 14));
+
+        b {
+          font-weight: 700;
         }
       }
     }
