--- a/app/pages/host-account/host-account-finances-statements.pug
+++ b/app/pages/host-account/host-account-finances-statements.pug
@@ -50,7 +50,7 @@ block content
                       option(value="") First Floor Desk Area
                       option(value="") Second Floor Desk Area
                       option(value="") Third Floor Desk Area
-              +nd-table._ledger._ledger_mobile._blight.__table_mt45._mb0
+              +nd-table._ledger-mobile._blight.__table_mt45._mb0
                 thead
                   tr
                     th Issued
